--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "projects",
   "version": "0.0.1",
-  "homepage": "http://devprogress.github.io",
+  "homepage": "http://devprogress.github.io/projects",
   "private": true,
   "devDependencies": {
     "autoprefixer": "6.4.0",
