--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.3",
+    "bootstrap-sass": "^3.3.7",
     "flux": "^2.1.1",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
