--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "flux": "^2.1.1",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
+    "react-bootstrap-gridify": "^1.0.3",
     "react-dom": "^15.3.1"
   },
   "scripts": {
