add dashboard URL to leaderboards

--- a/src/ProjectData.json
+++ b/src/ProjectData.json
@@ -187,7 +187,7 @@
      "status": "In Progress",
      "imageUrl": "",
      "repoUrl": "https://github.com/devprogress/calling-leaderboards",
-     "demoUrl": ""
+     "demoUrl": "https://devprogress.us/calling-leaderboards/dashboard.html"
      },
      {
      "name": "Mobile Quizzes",
