Update name and URL for "I like Hillary, But..."

--- a/src/ProjectData.json
+++ b/src/ProjectData.json
@@ -154,13 +154,13 @@
      "demoUrl": ""
      },
      {
-     "name": "I Like Hillary, But...",
+     "name": "I'd vote for Hillary, But...",
      "description": "Refutes common misconceptions about Hillary.",
      "techStack": ["Jekyll","CSS/SASS"],
      "status": "In Progress",
      "imageUrl": "https://cloud.githubusercontent.com/assets/12657/18656304/d467a7d4-7ea4-11e6-98a2-f787786037b9.jpg",
      "repoUrl": "https://github.com/DevProgress/i-like-hillary-but",
-     "demoUrl": "https://devprogress.us/i-like-hillary-but/"
+     "demoUrl": "https://hillarymyths.org/"
      },
      {
      "name": "Labor for Hillary",
