--- a/src/ProjectData.json
+++ b/src/ProjectData.json
@@ -253,6 +253,15 @@
      "demoUrl": ""
      },
      {
+     "name": "Who Dumped Trump?",
+     "description": "Shows which Republican candidates for governor, US Senate, and US House have dumped Trump",
+     "techStack": ["JS"],
+     "status": "Live",
+     "imageUrl": "",
+     "repoUrl": "https://github.com/DevProgress/whodumpedtrump",
+     "demoUrl": "http://whodumpedtrump.com/"
+     },
+     {
      "name": "Women for Hillary",
      "description": "Provides a web app featuring a Women for Hillary YouTube video.",
      "techStack": ["JS","HTML","D3","ghpages"],
