--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
+    "client-csv": "^0.0.4",
     "flux": "^2.1.1",
+    "papaparse": "^4.1.2",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
     "react-bootstrap-gridify": "^1.0.3",
