--- a/package.json
+++ b/package.json
@@ -54,8 +54,9 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "blob-polyfill": "^1.0.20150320",
     "bootstrap-sass": "^3.3.7",
-    "client-csv": "^0.0.4",
+    "file-saver": "^1.3.3",
     "flux": "^2.1.1",
     "papaparse": "^4.1.2",
     "react": "^15.3.1",
