Add license for more-tacos
Added in DevProgress/more-tacos#109.

--- a/src/ProjectData.json
+++ b/src/ProjectData.json
@@ -278,7 +278,7 @@
      "imageUrl": "https://cloud.githubusercontent.com/assets/1649528/18595294/e25965a2-7bf8-11e6-968e-a5f1ed36f7d6.png",
      "repoUrl": "https://github.com/devprogress/more-tacos",
      "demoUrl": "https://TacoTrucks.Party",
-     "license": ""
+     "license": "MIT"
      },
      {
      "name": "Visualize Voter Power",
