License info for debate-bingo

--- a/src/ProjectData.json
+++ b/src/ProjectData.json
@@ -58,7 +58,7 @@
      "imageUrl": "https://cloud.githubusercontent.com/assets/12657/18656292/c4d6bc6a-7ea4-11e6-86a7-7d10ea768bb6.jpg",
      "repoUrl": "https://github.com/devprogress/debate-bingo",
      "demoUrl": "http://presidentialdebatebingo.com/",
-     "license": ""
+     "license": "MIT"
      },
      {
      "name": "DevProgress.us",
