add license to hrc-events

--- a/src/ProjectData.json
+++ b/src/ProjectData.json
@@ -158,7 +158,7 @@
      "imageUrl": "https://cloud.githubusercontent.com/assets/12657/18649082/7133943e-7e72-11e6-8a6e-f8ac16bc9ac0.jpg",
      "repoUrl": "https://github.com/DevProgress/hrc-events",
      "demoUrl": "https://devprogress.us/hrc-events/ ",
-     "license": ""
+     "license": "MIT"
      },
      {
      "name": "HRC FriendFinder",
