--- a/src/ProjectData.json
+++ b/src/ProjectData.json
@@ -220,6 +220,15 @@
      "demoUrl": "",
      "license": ""
      },
+     "name": "My Vote Matters",
+     "description": "App for sharing selfies with filters & captions about why your vote matters (focused on women's right to vote), integrated with Twitter/FB.",
+     "techStack": ["HTML", "CSS", "JS"],
+     "status": "In Progress",
+     "imageUrl": "https://files.slack.com/files-pri/T1AJ4F4KC-F2Q2TK3DM/version_2.png",
+     "repoUrl": "https://github.com/DevProgress/my-vote-matters",
+     "demoUrl": "",
+     "license": "AGPL-3.0"
+     },
      {
      "name": "Not My Locker Room",
      "description": "Quotes from athletes whose locker rooms do not feature tales of assault.",
