Official license name for truth-bot

--- a/src/ProjectData.json
+++ b/src/ProjectData.json
@@ -178,7 +178,7 @@
      "imageUrl": "https://cloud.githubusercontent.com/assets/1126320/19450645/46cf679c-9478-11e6-97c5-01f05f0b89db.png",
      "repoUrl": "https://github.com/DevProgress/truth_bot",
      "demoUrl": "https://twitter.com/M1982Jamison/with_replies",
-     "license": "GNU"
+     "license": "GPL-3.0"
      },
      {
      "name": "I'd vote for Hillary, But...",
