--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
     "fs-extra": "0.30.0",
+    "gh-pages": "^0.11.0",
     "gulp": "^3.9.1",
-    "gulp-gh-pages": "^0.5.4",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.22.0",
     "http-proxy-middleware": "0.17.0",
