--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
   },
   "scripts": {
     "start": "node ./scripts/start.js",
-    "build": "node ./scripts/build.js"
+    "build": "node ./scripts/build.js",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "./config/eslint.js"
