--- a/src/ProjectData.json
+++ b/src/ProjectData.json
@@ -257,10 +257,10 @@
      "name": "My Vote Matters",
      "description": "App for sharing selfies with filters & captions about why your vote matters (focused on women's right to vote), integrated with Twitter/FB.",
      "techStack": ["HTML", "CSS", "JS"],
-     "status": "In Progress",
+     "status": "Live",
      "imageUrl": "https://files.slack.com/files-pri/T1AJ4F4KC-F2Q2TK3DM/version_2.png",
      "repoUrl": "https://github.com/DevProgress/my-vote-matters",
-     "demoUrl": "",
+     "demoUrl": "https://myvotematters.today",
      "license": "AGPL-3.0",
      "slackChannel": "#proj-myvotematters"
      },
